# PlaystationVita

./: LICENSE
Cosmos/: .gitignore
Cosmos/include/: Logger.h
Cosmos/include/controllers/: IoReadController.h  IoWriteController.h
Cosmos/include/rendering/: Color.h  Renderer.h  Triangle.h
Cosmos/include/tests/: Test.h  TestColor.h  TestIoCreationController.h  TestIoWriteController.h
Cosmos/src/controllers/: IoCreationController.cpp  TestController.cpp
Cosmos/src/rendering/: Renderer.cpp  Transform.cpp
Cosmos/src/tests/: TestColor.cpp  TestIoDestructionController.cpp
Cosmos/uml/: controllers.uxf  tests.uxf
Onyx/: CMakeLists.txt  path.cmake
Onyx/src/: carousel.cpp  file_manager.cpp  input.cpp  log.cpp  video.cpp
Onyx/src/graphics/: color.cpp  renderer.cpp  video_texture.cpp
Onyx/src/include/: database.h  file_manager.h  input.h  log.h  texture_manager.h  (+2 more)
Vita/Cosmos/: CMakeLists.txt  path.cmake
Vita/Cosmos/include/controllers/: IoCreationController.h  IoDestructionController.h  TestController.h
Vita/Cosmos/include/rendering/: RenderObject.h  Transform.h
Vita/Cosmos/include/tests/: TestIoDestructionController.h  TestIoReadController.h  UnitTest.h
Vita/Cosmos/sce_sys/livearea/contents/: template.xml
Vita/Cosmos/src/: Logger.cpp  Main.cpp
Vita/Cosmos/src/controllers/: IoDestructionController.cpp  IoReadController.cpp  IoWriteController.cpp
Vita/Cosmos/src/rendering/: Color.cpp  RenderObject.cpp  Triangle.cpp
Vita/Cosmos/src/tests/: TestIoCreationController.cpp  TestIoReadController.cpp  TestIoWriteController.cpp  UnitTest.cpp
Vita/Cosmos/uml/: rendering.uxf
(+31 files in other folders)
